Add remaining user api. Should be all (except schema) now
