# src/api/impl/user/payment-methods.js
@@ -14,25 +14,8 @@ function payment_method(user_id) {
         get: get
     };
 
-    // gets the tickets available to this user by first working out which groups they're a member of,
-    // then seeing what access that groups give them (and then stripping duplicate methods out).
-    // We also adjust the ticket limit by subtracting the number of tickets this user has bought
-    // using this payment method.
-    // TODO: Refactor into a SQL view
     function get() {
-        var sql = "SELECT id, name, description, ticket_limit - IFNULL(bought) AS ticket_limit \
-        FROM payment_method \
-            JOIN \
-                (SELECT DISTINCT(payment_method_id) FROM \
-                    (SELECT * FROM user_group_membership WHERE user_id=?) A \
-                        JOIN group_payment_method_access \
-                        ON A.group_id=group_payment_method_access.group_id) B \
-            ON B.payment_method_id=id \
-            LEFT JOIN \
-                (SELECT payment_method_id AS id, COUNT(*) AS bought FROM \
-                    ticket WHERE user_id=? \
-                    GROUP BY payment_method_id) C \
-            ON C.id=payment_method.id;";
-        return runSql(sql, [user_id, user_id]);
+        var sql = "CALL user_payment_types(?)";
+        return runSql(sql, [user_id]);
     }
 }
